fix: balance text width too small problam

--- a/Project4_Bankist/style.css
+++ b/Project4_Bankist/style.css
@@ -102,8 +102,8 @@ body {
 .balance {
     font-size: 3rem;
     font-weight: 700;
-    text-align: center;
-    width: 250px;
+    text-align: end;
+    width: 50%;
     color: #ff4f4f;
 }
 
